# RFlowStudio

./: .editorconfig  .gitignore  阶段4开发总结.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: datasets.py  health.py  router.py  tasks.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  dataset.py  workflow.py
backend/app/schemas/: analysis.py  dataset.py  health.py  task.py  workflow.py
backend/app/services/: __init__.py  dataset_cleaning_execute_service.py  dataset_cleaning_manage_service.py  dataset_cleaning_service.py  dataset_preview_service.py  dataset_reader_service.py  dataset_service.py  dataset_upload_service.py  task_service.py
backend/app/services/dataset/: __init__.py  dataset_preview_service.py  dataset_reader_service.py  dataset_service.py
backend/app/services/dataset/analysis/: __init__.py  dataset_analysis_execution_service.py  dataset_analysis_r_execution_service.py  dataset_analysis_r_script_service.py  dataset_analysis_report_service.py  dataset_analysis_service.py  (+6 more)
backend/app/workers/: __init__.py
backend/tests/: conftest.py  test_analysis_execution_backend.py  test_analysis_tasks.py  test_database_config.py  test_dataset_analysis_r_script_service.py  test_dataset_cleaning_steps.py  test_dataset_detail.py  test_dataset_metadata_storage.py  test_dataset_preview.py  test_dataset_profile.py  test_dataset_upload.py  test_dataset_xlsx.py  test_datasets.py  test_health.py  test_tasks.py
(+43 files in other folders)
